# transmitic

./: Cargo.toml  README.md  build.py  build.txt  config_sample.json  environment.txt
.cargo/: config.toml
.github/: FUNDING.yml
src/: about.htm  config.rs  config_start.htm  crypto_ids.rs  dialog.htm  dialog_help.htm  downloads.htm  extended-window-chrome.css  extended-window-crome.css  global_transmitic.js  help.htm  logging.htm  main.htm  main.rs  my_id.htm  my_shared.htm  my_sharing.htm  shared_file.rs  shared_with_me.htm  style.css  users.htm  utils.rs  welcome.htm
