[package]
name = "transmitic"
version = "0.12.0"
authors = ["Andrew Shay <andrew.shay@andrewshay.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sciter-rs = "0.5.58"
libc = "0.2.147"
lazy_static = "1.4"

serde = { version = "1.0.186", features = ["derive", "rc"] }
serde_json = "1.0.105"

transmitic_core = { path = "../transmitic-core" }
