[package]
name = "transmitic"
version = "0.14.0"
authors = ["Andrew Shay <andrew.shay@andrewshay.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sciter-rs = "0.5.58"
libc = "0.2.149"
lazy_static = "1.4"

serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"

transmitic_core = { path = "../transmitic-core" }
